[project]
name = "dst-deploy"
version = "0.1.0"
description = "dst deploy"
authors = [
    {name = "ylei", email = ""},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
# 开发环境
dev.env_file.override = "dev.env"
dev.cmd = "python3 src/dst_deploy/main.py"
# 测试环境
prod.env_file.override = "dev.env"
prod.cmd = "python3 src/dst_deploy/main.py"