[project]
name = "dst-deploy"
version = "0.1.0"
description = "dst deploy"
authors = [
    {name = "ylei", email = ""},
]
dependencies = [
    "py-steamcmd-wrapper>=1.1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]  # This is dev dependencies
dev = ["ruff"]

[tool.pdm.scripts]
# 开发环境
dev.env_file.override = "dev.env"
dev.cmd = "python3 -m dst_deploy.main"
# 测试环境
prod.env_file.override = "prod.env"
prod.cmd = "python3 -m dst_deploy.main"
# 打包
build = "pdm build --version auto"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
